dark mode fixes

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -6,13 +6,14 @@
     padding: 0;
 }
 :root {
-    --blanco: white;
+    --blanco: rgba(250,250,250, 0.9);
     --negro: dimgrey;
     --rosa: #E54266;
     --rojo: #B3344F;
 }
 .dark_theme{
-    --blanco: dimgrey;
+    --blanco: rgba(0,0,0, 0.9);
+    --blancoalpha: rgba(0,0,0, 0.5);
     --negro: white;
     --rosa: #E54266;
     --rojo: #E54266;
@@ -55,7 +56,7 @@ li a{
     text-decoration: none;
     color: var(--negro);
 }
-li a:hover{
+li.side_menu_item a:hover, .side_menu_subitem a:hover{
     background-color: var(--rosa);
     color: var(--blanco)
 }
@@ -68,20 +69,21 @@ li a:hover{
     display: block;
     padding: 2rem;
     cursor: pointer;
-    color: var(--negro)
+    color: var(--blanco)
 }
 #darkmode:hover{
-    background-color: var(--negro);
+    background-color: var(--blanco);
     color: var(--blanco);
 }
 .side_menu{
     margin: 0;
     background-color: var(--blanco);
-    width: 15%;
+    min-width: 10rem;
+    max-width: 20rem; 
     display: grid;
     float: left;
-    height: 100vw;
-    position:fixed;
+    height: 100vh;
+    position: fixed; top: 6.5rem; left: 0; display: table;
     box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 }
 .side_nav{
@@ -102,10 +104,11 @@ li a:hover{
 }
 #container{
     width: 75%;
-    margin-left: 40rem;
+    margin-left: 30rem;
     display: grid;
     grid-template-columns: auto auto auto auto;
     justify-content: space-evenly;
+
 }
 .element{
     display: flex;
@@ -117,7 +120,7 @@ li a:hover{
     flex-direction: column;
     justify-content:space-evenly;
     align-items: center;
-    background-color: var(--blanco);
+    background-color: var(--blancoalpha);
     color: var(--negro)
 }
 .name{
